# ArkAngel

./: .gitignore  AWS_INTEGRATION_README.md  README.md  config.toml  package-lock.json  package.json  tatus --porcelain  test_aws_connectivity.ps1  test_aws_integration.ps1  test_document.txt  test_file_upload.js  test_whisper.js
memory/: conversation_2025-08-24T05-50-11-454Z.json.synced  conversation_2025-08-24T05-50-46-653Z.json  conversation_2025-08-24T05-51-01-563Z.json  conversation_2025-08-24T05-51-13-108Z.json  conversation_2025-08-24T19-21-19-293Z.json  conversation_2025-08-24T19-21-25-939Z.json  conversation_2025-08-24T19-23-19-279Z.json  conversation_2025-08-24T19-25-19-289Z.json  conversation_2025-08-24T19-25-23-392Z.json  conversation_2025-08-25T01-58-08-263Z.json.synced  conversation_2025-08-25T02-01-57-156Z.json.synced  conversation_2025-08-25T02-02-36-924Z.json.synced  conversation_2025-08-25T02-35-29-984Z.json.synced  conversation_2025-08-25T02-35-41-258Z.json.synced  conversation_2025-08-25T02-36-07-586Z.json.synced  conversation_2025-08-25T02-36-22-626Z.json.synced  conversation_2025-08-25T02-36-41-597Z.json.synced  conversation_2025-08-25T02-39-24-564Z.json.synced  conversation_2025-08-25T02-41-09-642Z.json.synced  conversation_2025-08-25T02-41-20-850Z.json.synced  conversation_2025-08-25T02-41-42-426Z.json.synced  conversation_2025-08-25T02-41-52-122Z.json.synced
sidecar/: package-lock.json  package.json  tsconfig.json
src/: App.tsx  global.css
src-tauri/: .env.example  .gitignore  Cargo.toml  config.toml  tauri.conf.json
src-tauri/memory/: conversation_2025-08-24T04-08-00-316Z.json.synced
src-tauri/src/: aws_uploader.rs  file_storage.rs  google_oauth.rs  lib.rs  main.rs  pii_scrubber.rs
(+44 files in other folders)
